[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["abdullahnazzal <a.nazzal1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.1"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
